--- a/index.html
+++ b/index.html
@@ -240,8 +240,10 @@
             <img src="https://picsum.photos/1024/384" alt="" class="img-fluid">
         </section>
     </main>
-    <footer>
-
+    <footer class="bg-light p-3">
+        <p class="text-muted text-center m-0">
+            <a href="#" class="text-decoration-none">@Eu</a>
+        </p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
