--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Dentista</title>
 </head>
-<body>
+<body class="text-bg-light">
     <header class="navbar navbar-expand-md bg-primary navbar-dark py-2 shadow sticky-top">
         <section class="container">
             <a href="#" class="navbar-brand">
@@ -92,7 +92,7 @@
                         <section class="row row-cols-3 d-flex justify-content-center g-2" >
                             <section class="col">
                                 <div class="card shadow h-100 ">
-                                    <div class="card-header d-flex align-items-center justify-content-between">
+                                    <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2">Nome</p>
@@ -113,53 +113,7 @@
                             </section>
                             <section class="col">
                                 <div class="card shadow h-100">
-                                    <div class="card-header d-flex align-items-center justify-content-between">
-                                        <div class="d-flex align-items-center ">
-                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
-                                            <p class="m-0 ms-2">Nome</p>
-                                        </div>
-                                        <div class="d-flex ">
-                                            <i class="bi bi-star-fill"></i>
-                                            <i class="bi bi-star-fill"></i>
-                                            <i class="bi bi-star-fill"></i>
-                                            <i class="bi bi-star-fill"></i>
-                                            <i class="bi bi-star-fill"></i>
-                                        </div>
-                                    </div>
-                                    <div class="card-body pb-5">
-                                        <p class="card-title fw-bold">Clareamento</p>
-                                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloremque, optio unde nostrum at velit? Quis in quasi sed earum delectus. Assumenda magni temporibus eveniet quibusdam voluptatem, hic id commodi dolorem repellat optio eaque molestiae sapiente ex esse quae sit totam possimus consequatur aut cum in incidunt placeat. Voluptates, blanditiis?</p>
-                                    </div>
-                                </div>
-                            </section>
-                        </section>
-                    </section>
-                    <section class="carousel-item" data-bs-interval="5000">
-                        <section class="row row-cols-3 g-3 d-flex justify-content-center" >
-                            <section class="col">
-                                <div class="card shadow h-100">
-                                    <div class="card-header d-flex align-items-center justify-content-between">
-                                        <div class="d-flex align-items-center ">
-                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
-                                            <p class="m-0 ms-2">Nome</p>
-                                        </div>
-                                        <div class="d-flex ">
-                                            <i class="bi bi-star-fill"></i>
-                                            <i class="bi bi-star-fill"></i>
-                                            <i class="bi bi-star-fill"></i>
-                                            <i class="bi bi-star-fill"></i>
-                                            <i class="bi bi-star-fill"></i>
-                                        </div>
-                                    </div>
-                                    <div class="card-body pb-5">
-                                        <p class="card-title fw-bold">Clareamento</p>
-                                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloremque, optio unde nostrum at velit? Quis in quasi sed earum delectus. Assumenda magni temporibus eveniet quibusdam voluptatem, hic id commodi dolorem repellat optio eaque molestiae sapiente ex esse quae sit totam possimus consequatur aut cum in incidunt placeat. Voluptates, blanditiis?</p>
-                                    </div>
-                                </div>
-                            </section>
-                            <section class="col">
-                                <div class="card shadow h-100">
-                                    <div class="card-header d-flex align-items-center justify-content-between">
+                                    <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2">Nome</p>
@@ -184,7 +138,7 @@
                         <section class="row row-cols-3 g-3 d-flex justify-content-center" >
                             <section class="col">
                                 <div class="card shadow h-100">
-                                    <div class="card-header d-flex align-items-center justify-content-between">
+                                    <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2">Nome</p>
@@ -205,7 +159,53 @@
                             </section>
                             <section class="col">
                                 <div class="card shadow h-100">
-                                    <div class="card-header d-flex align-items-center justify-content-between">
+                                    <div class="card-header bg-info d-flex align-items-center justify-content-between">
+                                        <div class="d-flex align-items-center ">
+                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
+                                            <p class="m-0 ms-2">Nome</p>
+                                        </div>
+                                        <div class="d-flex ">
+                                            <i class="bi bi-star-fill"></i>
+                                            <i class="bi bi-star-fill"></i>
+                                            <i class="bi bi-star-fill"></i>
+                                            <i class="bi bi-star-fill"></i>
+                                            <i class="bi bi-star-fill"></i>
+                                        </div>
+                                    </div>
+                                    <div class="card-body pb-5">
+                                        <p class="card-title fw-bold">Clareamento</p>
+                                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloremque, optio unde nostrum at velit? Quis in quasi sed earum delectus. Assumenda magni temporibus eveniet quibusdam voluptatem, hic id commodi dolorem repellat optio eaque molestiae sapiente ex esse quae sit totam possimus consequatur aut cum in incidunt placeat. Voluptates, blanditiis?</p>
+                                    </div>
+                                </div>
+                            </section>
+                        </section>
+                    </section>
+                    <section class="carousel-item" data-bs-interval="5000">
+                        <section class="row row-cols-3 g-3 d-flex justify-content-center" >
+                            <section class="col">
+                                <div class="card shadow h-100">
+                                    <div class="card-header bg-info d-flex align-items-center justify-content-between">
+                                        <div class="d-flex align-items-center ">
+                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
+                                            <p class="m-0 ms-2">Nome</p>
+                                        </div>
+                                        <div class="d-flex ">
+                                            <i class="bi bi-star-fill"></i>
+                                            <i class="bi bi-star-fill"></i>
+                                            <i class="bi bi-star-fill"></i>
+                                            <i class="bi bi-star-fill"></i>
+                                            <i class="bi bi-star-fill"></i>
+                                        </div>
+                                    </div>
+                                    <div class="card-body pb-5">
+                                        <p class="card-title fw-bold">Clareamento</p>
+                                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloremque, optio unde nostrum at velit? Quis in quasi sed earum delectus. Assumenda magni temporibus eveniet quibusdam voluptatem, hic id commodi dolorem repellat optio eaque molestiae sapiente ex esse quae sit totam possimus consequatur aut cum in incidunt placeat. Voluptates, blanditiis?</p>
+                                    </div>
+                                </div>
+                            </section>
+                            <section class="col">
+                                <div class="card shadow h-100">
+                                    <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2">Nome</p>
@@ -248,7 +248,7 @@
                         <section class="row d-flex justify-content-center" >
                             <section class="col-9">
                                 <div class="card shadow h-100">
-                                    <div class="card-header d-flex align-items-center justify-content-between">
+                                    <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2">Nome</p>
@@ -273,7 +273,7 @@
                         <section class="row d-flex justify-content-center" >
                             <section class="col-9">
                                 <div class="card shadow h-100">
-                                    <div class="card-header d-flex align-items-center justify-content-between">
+                                    <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2">Nome</p>
@@ -298,7 +298,7 @@
                         <section class="row d-flex justify-content-center" >
                             <section class="col-9">
                                 <div class="card shadow h-100">
-                                    <div class="card-header d-flex align-items-center justify-content-between">
+                                    <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2">Nome</p>
@@ -323,7 +323,7 @@
                         <section class="row d-flex justify-content-center" >
                             <section class="col-9">
                                 <div class="card shadow h-100">
-                                    <div class="card-header d-flex align-items-center justify-content-between">
+                                    <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2">Nome</p>
@@ -348,7 +348,7 @@
                         <section class="row d-flex justify-content-center" >
                             <section class="col-9">
                                 <div class="card shadow h-100">
-                                    <div class="card-header d-flex align-items-center justify-content-between">
+                                    <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2">Nome</p>
@@ -373,7 +373,7 @@
                         <section class="row d-flex justify-content-center" >
                             <section class="col-9">
                                 <div class="card shadow h-100">
-                                    <div class="card-header d-flex align-items-center justify-content-between">
+                                    <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2">Nome</p>
