--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
     <title>Dentista</title>
 </head>
-<body class="text-bg-light">
+<body class="text-bg-dark">
     <header class="navbar navbar-expand-md bg-primary navbar-dark py-2 shadow sticky-top">
         <section class="container">
             <a href="#" class="navbar-brand">
-                <img src="https://picsum.photos/50/50?random=1" class="rounded" alt="">
+                <img src="https://picsum.photos/50/50?random=1" class="rounded-circle" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
                 <span class="navbar-toggler-icon"></span>
@@ -91,7 +91,7 @@
                     <section class="carousel-item active" data-bs-interval="5000">
                         <section class="row row-cols-3 d-flex justify-content-center g-2" >
                             <section class="col-5">
-                                <div class="card border-none shadow h-100 ">
+                                <div class="card border-0 shadow h-100 ">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
@@ -112,7 +112,7 @@
                                 </div>
                             </section>
                             <section class="col-5">
-                                <div class="card border-none shadow h-100">
+                                <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
@@ -137,7 +137,7 @@
                     <section class="carousel-item" data-bs-interval="5000">
                         <section class="row row-cols-3 g-3 d-flex justify-content-center" >
                             <section class="col-5">
-                                <div class="card border-none shadow h-100">
+                                <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
@@ -158,7 +158,7 @@
                                 </div>
                             </section>
                             <section class="col-5">
-                                <div class="card border-none shadow h-100">
+                                <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
@@ -183,7 +183,7 @@
                     <section class="carousel-item" data-bs-interval="5000">
                         <section class="row row-cols-3 g-3 d-flex justify-content-center" >
                             <section class="col-5">
-                                <div class="card border-none shadow h-100">
+                                <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
@@ -204,7 +204,7 @@
                                 </div>
                             </section>
                             <section class="col-5">
-                                <div class="card border-none shadow h-100">
+                                <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
@@ -247,7 +247,7 @@
                     <section class="carousel-item active" data-bs-interval="3000">
                         <section class="row d-flex justify-content-center" >
                             <section class="col-9">
-                                <div class="card border-none shadow h-100">
+                                <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
@@ -272,7 +272,7 @@
                     <section class="carousel-item" data-bs-interval="3000">
                         <section class="row d-flex justify-content-center" >
                             <section class="col-9">
-                                <div class="card border-none shadow h-100">
+                                <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
@@ -297,7 +297,7 @@
                     <section class="carousel-item" data-bs-interval="3000">
                         <section class="row d-flex justify-content-center" >
                             <section class="col-9">
-                                <div class="card border-none shadow h-100">
+                                <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
@@ -322,7 +322,7 @@
                     <section class="carousel-item" data-bs-interval="3000">
                         <section class="row d-flex justify-content-center" >
                             <section class="col-9">
-                                <div class="card border-none shadow h-100">
+                                <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
@@ -347,7 +347,7 @@
                     <section class="carousel-item" data-bs-interval="3000">
                         <section class="row d-flex justify-content-center" >
                             <section class="col-9">
-                                <div class="card border-none shadow h-100">
+                                <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
@@ -372,7 +372,7 @@
                     <section class="carousel-item" data-bs-interval="3000">
                         <section class="row d-flex justify-content-center" >
                             <section class="col-9">
-                                <div class="card border-none shadow h-100">
+                                <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
                                             <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
@@ -405,14 +405,16 @@
         </section>
         <section id="antesEDepois" class="mt-3">
             <p class="text-center fs-1 fw-bolder">Antes e Depois</p>
-            <img src="https://picsum.photos/1024/384" alt="" class="img-fluid">
+            <img src="https://picsum.photos/1024/384" alt="" class="img-fluid rounded shadow">
         </section>
     </main>
-    <footer class="bg-light p-3">
-        <p class="text-muted text-center m-0">
-            <a href="#" class="text-decoration-none">@Eu</a>
+    <footer class="text-bg-light p-3">
+        <p class="text-center m-0">
+            <a href="#" class="text-decoration-none text-muted">@Eu</a>
         </p>
     </footer>
+
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
