--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
                 <section class="col">
                     <div class="card shadow h-100">
                         <img src="https://picsum.photos/354/354?random=2" alt="" class="card-img-top">
-                        <p class="card-header text-center">Clareamento</p>
+                        <p class="card-header fw-bold text-bg-primary text-center">Clareamento</p>
                         <p class="card-text p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloremque, optio unde nostrum at velit? Quis in quasi sed earum delectus. Assumenda magni temporibus eveniet quibusdam voluptatem, hic id commodi dolorem repellat optio eaque molestiae sapiente ex esse quae sit totam possimus consequatur aut cum in incidunt placeat. Voluptates, blanditiis?
                     </div>
                 </section>
                 <section class="col">
                     <div class="card shadow h-100">
                         <img src="https://picsum.photos/354/354?random=3" alt="" class="card-img-top">
-                        <p class="card-header text-center">Clareamento</p>
+                        <p class="card-header fw-bold text-bg-primary text-center">Clareamento</p>
                         <p class="card-text p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloremque, optio unde nostrum at velit? Quis in quasi sed earum delectus. Assumenda magni temporibus eveniet quibusdam voluptatem, hic id commodi dolorem repellat optio eaque molestiae sapiente ex esse quae sit totam possimus consequatur aut cum in incidunt placeat. Voluptates, blanditiis?
                     </div>
                 </section>
                 <section class="col">
                     <div class="card shadow h-100">
                         <img src="https://picsum.photos/354/354?random=4" alt="" class="card-img-top">
-                        <p class="card-header text-center">Clareamento</p>
+                        <p class="card-header fw-bold text-bg-primary text-center">Clareamento</p>
                         <p class="card-text p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloremque, optio unde nostrum at velit? Quis in quasi sed earum delectus. Assumenda magni temporibus eveniet quibusdam voluptatem, hic id commodi dolorem repellat optio eaque molestiae sapiente ex esse quae sit totam possimus consequatur aut cum in incidunt placeat. Voluptates, blanditiis?
                     </div>
                 </section>
