--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="shortcut icon" href="imagens/IconePagina.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Dentista</title>
@@ -12,7 +13,7 @@
     <header class="navbar navbar-expand-md bg-primary  navbar-dark py-2 shadow sticky-top">
         <nav class="container">
             <a href="#" class="navbar-brand">
-                <img src="https://picsum.photos/50/50?random=1" class="rounded-circle" alt="">
+                <img src="imagens/Logo.png" class="rounded-circle" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
                 <span class="navbar-toggler-icon"></span>
@@ -50,13 +51,13 @@
             </section>
             <section class="carousel-inner">
                 <section class="carousel-item active" data-bs-interval="3000">
-                    <img src="https://picsum.photos/1024/384?random=1" alt="" class="d-block w-100 rounded">
+                    <img src="imagens/Sorriso.png" alt="" class="d-block w-100 rounded">
                 </section>
                 <section class="carousel-item" data-bs-interval="3000">
-                    <img src="https://picsum.photos/1024/384?random=2" alt="" class="d-block w-100 rounded">
+                    <img src="imagens/Crianca.png" alt="" class="d-block w-100 rounded">
                 </section>
-                <section class="carousel-item" data-bs-interval="3000">
-                    <img src="https://picsum.photos/1024/384?random=3" alt="" class="d-block w-100 rounded">
+                <section class="carousel-item" data-bs-interval="4000">
+                    <img src="imagens/Profissional.png" alt="" class="d-block w-100 rounded">
                 </section>
             </section>
             <button class="carousel-control-prev" data-bs-target="#home" data-bs-slide="prev">
@@ -71,21 +72,21 @@
             <section class="row row-cols-1 row-cols-sm-3 g-3" >
                 <section class="col">
                     <div class="card shadow h-100">
-                        <img src="https://picsum.photos/354/354?random=2" alt="" class="card-img-top">
+                        <img src="imagens/Clareamento.png" alt="" class="card-img-top">
                         <p class="card-header fw-bold text-bg-primary text-center">Clareamento</p>
                         <p class="card-text p-3">Procedimento estético que remove manchas e amarelamento dos dentes, deixando-os mais brancos. Pode ser feito a laser em consultório ou com moldeiras e gel em casa.</p>
                     </div>
                 </section>
                 <section class="col">
                     <div class="card shadow h-100">
-                        <img src="https://picsum.photos/354/354?random=3" alt="" class="card-img-top">
+                        <img src="imagens/Ortodontia.png" alt="" class="card-img-top">
                         <p class="card-header fw-bold text-bg-primary text-center">Ortodontia</p>
                         <p class="card-text p-3">Área da odontologia responsável pelo alinhamento dos dentes e correção da mordida. Usa aparelhos fixos ou alinhadores transparentes para melhorar a estética e a função mastigatória.</p>
                     </div>
                 </section>
                 <section class="col">
                     <div class="card shadow h-100">
-                        <img src="https://picsum.photos/354/354?random=4" alt="" class="card-img-top">
+                        <img src="imagens/Implantes.png" alt="" class="card-img-top">
                         <p class="card-header fw-bold text-bg-primary text-center">Implantes</p>
                         <p class="card-text p-3">Solução para substituir dentes perdidos. Um pino de titânio é fixado no osso da mandíbula ou maxila, funcionando como uma raiz artificial, onde uma prótese dentária é encaixada.</p>
                     </div>
@@ -418,7 +419,7 @@
         </section>
         <section id="antesEDepois" class="mt-3">
             <p class="text-center fs-1 fw-bolder">Antes e Depois</p>
-            <img src="https://picsum.photos/1024/384" alt="" class="img-fluid rounded shadow">
+            <img src="imagens/AntesEDepois.png" alt="" class="img-fluid rounded shadow">
         </section>
     </main>
     <footer class="text-bg-light p-3">
