--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <div class="card border-0 shadow h-100 ">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
-                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
+                                            <img src="imagens/Pessoa.png" alt="" class="rounded-circle h-25">
                                             <p class="m-0 ms-2 fw-bold">Ana Souza</p>
                                         </div>
                                         <div class="d-flex ">
@@ -129,7 +129,7 @@
                                 <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
-                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
+                                            <img src="imagens/Pessoa2.png" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2 fw-bold">Carlos Mendes</p>
                                         </div>
                                         <div class="d-flex ">
@@ -154,7 +154,7 @@
                                 <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
-                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
+                                            <img src="imagens/Pessoa3.png" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2 fw-bold">Mariana Ferreira</p>
                                         </div>
                                         <div class="d-flex ">
@@ -175,7 +175,7 @@
                                 <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
-                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
+                                            <img src="imagens/Pessoa4.png" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2 fw-bold">Ricardo Lima</p>
                                         </div>
                                         <div class="d-flex ">
@@ -200,7 +200,7 @@
                                 <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
-                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
+                                            <img src="imagens/Pessoa5.png" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2 fw-bold">Beatriz Nogueira</p>
                                         </div>
                                         <div class="d-flex ">
@@ -221,7 +221,7 @@
                                 <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
-                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
+                                            <img src="imagens/Pessoa6.png" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2 fw-bold">Lucas Almeida</p>
                                         </div>
                                         <div class="d-flex ">
@@ -264,7 +264,7 @@
                                 <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
-                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
+                                            <img src="imagens/Pessoa.png" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2 fw-bold">Ana Souza</p>
                                         </div>
                                         <div class="d-flex ">
@@ -289,7 +289,7 @@
                                 <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
-                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
+                                            <img src="imagens/Pessoa2.png" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2 fw-bold">Carlos Mendes</p>
                                         </div>
                                         <div class="d-flex ">
@@ -314,7 +314,7 @@
                                 <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
-                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
+                                            <img src="imagens/Pessoa3.png" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2 fw-bold">Mariana Ferreira</p>
                                         </div>
                                         <div class="d-flex ">
@@ -339,7 +339,7 @@
                                 <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
-                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
+                                            <img src="imagens/Pessoa4.png" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2 fw-bold">Ricardo Lima</p>
                                         </div>
                                         <div class="d-flex ">
@@ -364,7 +364,7 @@
                                 <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
-                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
+                                            <img src="imagens/Pessoa5.png" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2 fw-bold">Beatriz Nogueira</p>
                                         </div>
                                         <div class="d-flex ">
@@ -389,7 +389,7 @@
                                 <div class="card border-0 shadow h-100">
                                     <div class="card-header bg-info d-flex align-items-center justify-content-between">
                                         <div class="d-flex align-items-center ">
-                                            <img src="https://picsum.photos/50/50?random=2" alt="" class="rounded-circle">
+                                            <img src="imagens/Pessoa6.png" alt="" class="rounded-circle">
                                             <p class="m-0 ms-2 fw-bold">Lucas Almeida</p>
                                         </div>
                                         <div class="d-flex ">
