--- a/index.html
+++ b/index.html
@@ -421,6 +421,11 @@
             <p class="text-center fs-1 fw-bolder">Antes e Depois</p>
             <img src="imagens/AntesEDepois.png" alt="" class="img-fluid rounded shadow">
         </section>
+        <section class="m-3 fixed-bottom w-25 ms-auto d-flex justify-content-end">
+            <a href="https://web.whatsapp.com/" target="_blank" class="bg-success p-3 rounded-circle">
+                <i class="bi bi-whatsapp fs-1 text-white"></i>
+            </a>
+        </section>
     </main>
     <footer class="text-bg-light p-3">
         <p class="text-center m-0">
