Arrumei a ultima imagem

--- a/index.html
+++ b/index.html
@@ -416,9 +416,9 @@
                 </button>
             </section>
         </section>
-        <section id="antesEDepois" class="mt-3">
-            <p class="text-center fs-1 fw-bolder">Antes e Depois</p>
-            <img src="imagens/AntesEDepois.png" alt="" class="img-fluid rounded shadow">
+        <section id="antesEDepois" class="mt-3 text-center">
+            <p class="fs-1 fw-bolder">Antes e Depois</p>
+            <img src="imagens/AntesEDepois.png" alt="" class="m-auto img-fluid rounded shadow">
         </section>
         <section class="m-3 fixed-bottom w-25 ms-auto d-flex justify-content-end ">
             <a href="https://web.whatsapp.com/" target="_blank" class="bg-success p-3 rounded-circle d-flex justify-content-center align-items-center">
